--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -198,42 +198,45 @@
 	</footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        /*Анімація сердечка*/
+        const heartButtons = document.querySelectorAll('.heart-button');
+
+        heartButtons.forEach((button) => {
+            button.addEventListener('click', function() {
+                this.classList.toggle('active');
+            });
+        });
+
+
+        /*Анімація кнопки плей*/
+        const playButtons = document.querySelectorAll('.play-button');
+
+        playButtons.forEach((button) => {
+            button.addEventListener('click', function() {
+                let podcastBlock = this.closest('.positions_in_block');
+                podcastBlock.classList.toggle('active');
+
+                let podcastElement = this.closest('.podcast');
+                podcastElement.classList.toggle('active');
+
+                const contextElement = podcastElement.querySelector('.context');
+                contextElement.classList.toggle('reversed');
+
+                this.classList.toggle('expanded');
+
+                let playPath = this.querySelector('.play-path');
+                if (podcastBlock.classList.contains('active')) {
+                    playPath.setAttribute('d', 'M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM224 192V320c0 17.7-14.3 32-32 32s-32-14.3-32-32V192c0-17.7 14.3-32 32-32s32 14.3 32 32zm128 0V320c0 17.7-14.3 32-32 32s-32-14.3-32-32V192c0-17.7 14.3-32 32-32s32 14.3 32 32z');
+                } else {
+                    playPath.setAttribute('d', 'M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9V344c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z');
+                }
+            });
+        });
+    </script>
 <script>
 
-	/*Анімація сердечка*/
-	const heartButtons = document.querySelectorAll('.heart-button');
 
-	heartButtons.forEach((button) => {
-	    button.addEventListener('click', function() {
-	        this.classList.toggle('active');
-	    });
-	});
-
-
-	/*Анімація кнопки плей*/	
-	const playButtons = document.querySelectorAll('.play-button');
-
-	playButtons.forEach((button) => {
-	    button.addEventListener('click', function() {
-	        let podcastBlock = this.closest('.positions_in_block');
-	        podcastBlock.classList.toggle('active');
-
-	        let podcastElement = this.closest('.podcast');
-	        podcastElement.classList.toggle('active');
-
-	        const contextElement = podcastElement.querySelector('.context');
-        	contextElement.classList.toggle('reversed');
-
-        	this.classList.toggle('expanded');
-
-	        let playPath = this.querySelector('.play-path');
-	        if (podcastBlock.classList.contains('active')) {
-	            playPath.setAttribute('d', 'M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM224 192V320c0 17.7-14.3 32-32 32s-32-14.3-32-32V192c0-17.7 14.3-32 32-32s32 14.3 32 32zm128 0V320c0 17.7-14.3 32-32 32s-32-14.3-32-32V192c0-17.7 14.3-32 32-32s32 14.3 32 32z');
-	        } else {
-	            playPath.setAttribute('d', 'M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9V344c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z');
-	        }
-	    });
-	});
 
 	/*Анімація копки плей у футері*/
 	const playButton = document.querySelector('#play-pause-button');
