added work with API on pages and fix bugs

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1193,6 +1193,12 @@ input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):
 .logout-section:hover .logout-link img {
     filter: invert(1);
 }
+.name-edit:hover {
+    background-color: #56A442;
+}
+.name-edit:focus {
+    background-color: #fff;
+}
 .name-edit:hover .edit-link {
     color: #fff;
 }
@@ -1200,10 +1206,10 @@ input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):
     filter: invert(1);
 }
 .name-edit:focus .edit-link {
-    color: #fff;
+    color: #000000;
 }
 .name-edit:focus img {
-    filter: invert(1);
+    filter: invert(0);
 }
 .user-page-password {
     color: #FFFFFF;
@@ -1407,3 +1413,14 @@ selected-item-filter {
 
 }
 /*All Podcast Page end*/
+
+/*NavBar start*/
+.username-account {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+.username-account img {
+    margin-right: 10px;
+}
+/*NavBar end*/
