--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     position: relative;
     min-height: 100vh;
-    padding-bottom: 94px;
+    /*padding-bottom: 94px;*/
 }
 a:hover {
     text-decoration: none;
@@ -382,9 +382,11 @@ header {
 .search {
     position: relative;
     width: 500px;
+    transition: .3s;
 }
 
 .search input[type="text"] {
+    width: -webkit-fill-available !important;
     /* max-width: 515px; */
     padding: 6px 20px 6px 53px !important;
     border-radius: 30px !important;
@@ -1264,6 +1266,7 @@ input[type="range"]::before {
     -webkit-backdrop-filter: blur(12.5px);
     backdrop-filter: blur(12.5px);
     border-radius: 12px;
+    transition: .3s;
 }
 
 .input-field input::-webkit-input-placeholder {
@@ -1613,7 +1616,7 @@ input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):
     margin: 0;
     opacity: 1;
     position: absolute;
-    left: 140px;
+    left: 162px;
     top: 130px;
     z-index: 200;
     -webkit-box-orient: vertical;
@@ -1985,6 +1988,9 @@ selected-item-filter {
 .username-account img {
     margin-right: 10px;
 }
+.sidebar-menu.small {
+    width: 70px;
+}
 /*NavBar end*/
 
 .loading {
@@ -2082,3 +2088,454 @@ selected-item-filter {
     transform: rotate(-90deg);
 }
 /*Settings page end*/
+
+/*Media settings start*/
+@media(max-width: 1925px){
+    .search-results {
+        left: 36%;
+    }
+}
+@media(max-width: 1840px){
+    .search-results {
+        left: 35%;
+    }
+}
+@media(max-width: 1698px){
+    .search-results {
+        left: 34%;
+    }
+}
+@media(max-width: 1561px){
+    .search-results {
+        left: 33%;
+    }
+}
+@media(max-width: 1436px){
+    .search-results {
+        left: 32%;
+    }
+}
+@media(max-width: 1376px){
+    .search-results {
+        left: 31%;
+    }
+}
+@media(max-width: 1308px){
+    .search-results {
+        left: 30%;
+    }
+}
+@media(max-width: 1241px){
+    .search-results {
+        left: 29%;
+    }
+}
+@media(max-width: 1209px){
+    .search-results {
+        left: 28%;
+    }
+}
+@media(max-width: 1152px){
+    .search-results {
+        left: 27%;
+    }
+}
+@media(max-width: 1135px){
+    .search-results {
+        left: 26%;
+    }
+}
+@media(max-width: 1063px){
+    .search-results {
+        left: 25%;
+    }
+}
+@media(max-width: 1021px){
+    .search-results {
+        left: 24%;
+    }
+    .search {
+        width: 400px;
+    }
+    .one-language {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .dropdown-language {
+        position: relative;
+        left: -193px;
+        top: 33px;
+    }
+    .categories-list-block {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        align-content: flex-start;
+    }
+}
+@media(max-width: 990px){
+    .search-results {
+        left: 28%;
+    }
+    .search-results {
+        width: 400px;
+    }
+    .audio-photo-names {
+        width: 15%;
+    }
+    .audio-rating {
+        display: none;
+    }
+    .audio_usage {
+        width: 70%;
+    }
+    .audio-setting {
+        width: 15%;
+    }
+}
+@media(max-width: 946px){
+    .dropdown-language {
+        position: relative;
+        left: 158px;
+        top: 6px;
+    }
+}
+@media(max-width: 938px){
+    .search-results {
+        left: 27%;
+    }
+    .auth-card {
+        width: 660px;
+    }
+    .dropdown-container {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: auto;
+        padding-bottom: 25px;
+        flex-direction: column;
+    }
+    .dropdown-filter {
+        left: 116px;
+        top: 156px;
+    }
+    .dropdown-content {
+        left: 114px;
+        top: 153px;
+    }
+}
+@media(max-width: 920px){
+    .search {
+        width: 400px;
+    }
+    .search-results {
+        left: 26%;
+        width: 400px;
+    }
+}
+@media(max-width: 855px){
+    .search-results {
+        left: 25%;
+    }
+}
+@media(max-width: 840px){
+    .audio_usage {
+        width: 50%;
+    }
+    .audio-photo-names {
+        width: 25%;
+    }
+    .audio-setting {
+        width: 25%;
+    }
+}
+@media(max-width: 825px){
+    .search {
+        width: 300px;
+    }
+    .search-results {
+        left: 30%;
+        width: 300px;
+    }
+}
+@media(max-width: 785px){
+    .search-results {
+        left: 29%;
+    }
+    .auth-card {
+        width: 560px;
+    }
+}
+@media(max-width: 770px){
+    .audio_usage {
+        width: 40%;
+    }
+    .audio-photo-names {
+        width: 20%;
+    }
+    .audio-setting {
+        width: 20%;
+    }
+}
+@media(max-width: 750px){
+    .search-results {
+        left: 28%;
+    }
+}
+@media(max-width: 718px){
+    .search-results {
+        left: 27%;
+    }
+}
+@media(max-width: 695px){
+    .search {
+        width: 200px;
+    }
+    .search-results {
+        left: 26%;
+        width: 300px;
+    }
+    .site-content.full {
+        overflow-x: hidden;
+    }
+}
+@media(max-width: 640px){
+    .search-results {
+        left: 24%;
+    }
+    .auth-card {
+        width: 450px;
+    }
+}
+@media(max-width: 600px){
+    .search {
+        width: 150px;
+    }
+    .search-results {
+        left: 23%;
+        width: 300px;
+    }
+    .logotype {
+        height: auto;
+        position: relative;
+        top: 4px;
+        width: 100px;
+    }
+    .main-section {
+        display: flex;
+        margin: 10px 15px;
+        height: calc(100vh - 240px);
+    }
+    .podcast_autor {
+        display: none;
+    }
+    .audio_usage {
+        width: 30%;
+    }
+    .audio-photo-names {
+        width: 20%;
+    }
+    .audio-setting {
+        width: 20%;
+        justify-content: flex-end;
+    }
+    #volume-slider {
+        display: none;
+    }
+    #seek-slider {
+        display: none;
+    }
+    #duration {
+        display: none;
+    }
+    .time {
+        width: auto;
+    }
+    .audio-player {
+        padding: 10px 15px;
+    }
+    .header_items {
+        padding: 20px 20px;
+    }
+    .search .search-icon {
+        left: 12px;
+        width: 15px;
+        height: 15px;
+    }
+    .search input[type="text"] {
+        padding: 6px 17px 6px 35px !important;
+    }
+    .search {
+        width: 104px;
+    }
+    .title_podcast {
+        font-size: 23px;
+    }
+    .site-content {
+        padding: 30px 25px;
+    }
+    .content-settings {
+        margin: 15px 0 0 0px;
+    }
+    .view_all a {
+        font-size: 19px;
+    }
+}
+@media(max-width: 570px){
+    .search-results {
+        left: 20%;
+        width: 300px;
+    }
+    .dropdown-result li {
+        transition: .3s;
+        cursor: pointer;
+        padding: 10px 10px;
+    }
+}
+@media(max-width: 530px){
+    .search-results {
+        left: 19%;
+        width: 300px;
+    }
+    .auth-card {
+        width: 400px;
+    }
+    .butt_login {
+        padding: 10px;
+    }
+    .card .card-content {
+        padding: 20px;
+    }
+    .card .card-content .card-title {
+        line-height: 25px;
+        margin-top: 10px;
+        margin-bottom: 23px;
+        font-size: 30px;
+    }
+    .view_all a {
+        font-size: 18px;
+    }
+}
+@media(max-width: 500px){
+    .play-button.expanded svg {
+        left: 26px;
+    }
+    .card .card-content .card-title {
+        line-height: 37px;
+        margin-top: 10px;
+        margin-bottom: 15px;
+        font-size: 27px;
+    }
+    .dropdown-language {
+        position: relative;
+        left: 8px;
+        top: 10px;
+    }
+}
+@media(max-width: 475px){
+    .play-button.expanded svg {
+        left: 14px;
+    }
+    .podcast_name {
+        font-size: 17px;
+    }
+    .auth-card {
+        width: 370px;
+    }
+    .auth-submit {
+        font-size: 17px;
+        padding: 10px 35px;
+    }
+    .main-section {
+        margin: 5px 5px;
+    }
+    header {
+        margin: 5px 5px 0;
+    }
+    .sidebar-menu {
+        width: 200px;
+        margin-right: 5px;
+    }
+    .site-content {
+        width: calc(100% - 200px);
+    }
+    .sidebar-menu li {
+        padding: 8px 18px;
+    }
+    .sidebar-menu.small {
+        width: 60px;
+    }
+    .sidebar-menu .menu-header {
+        margin: 15px 18px 0px;
+    }
+}
+@media(max-width: 468px){
+    .search-results {
+        left: 14%;
+        width: 340px;
+    }
+    .dropdown-content {
+        left: 84px;
+        top: 153px;
+    }
+    .site-content {
+        padding: 30px 7px 30px 15px;
+    }
+    .search input[type="text"] {
+        font-size: 14px !important;
+        padding: 4px 17px 4px 35px !important;
+    }
+    .logotype {
+        height: auto;
+        position: relative;
+        top: 4px;
+        width: 80px;
+    }
+    .autorizhate a {
+        color: #fff;
+        font-size: 15px;
+        font-weight: 700;
+        padding: 5px;
+    }
+}
+@media(max-width: 443px){
+    .search-results {
+        left: 12%;
+        width: 340px;
+    }
+    .block-podcasts {
+        padding: 5px 0 0 0;
+    }
+    .play-button.expanded svg {
+        left: 20px;
+    }
+    .page_title p {
+        font-size: 27px;
+        margin: 0 0 0 10px;
+    }
+    .Categories_main p {
+        font-size: 18px;
+        margin: 0 0 0 10px;
+    }
+    .Categories_main a {
+        font-size: 14px;
+        margin: 0 10px 0 0;
+    }
+    .dropdown span {
+        font-size: 18px;
+    }
+    .categories-list-block span {
+        font-size: 17px;
+        padding: 6px 20px;
+    }
+    .title-category p span {
+        font-size: 22px;
+    }
+}
+@media(max-width: 421px){
+    .search-results {
+        left: 10%;
+        width: 340px;
+    }
+}
+/*Media settings end*/
