--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     border: none;
 }
+/**, *::before, *::after {*/
+/*    box-sizing: border-box;*/
+/*}*/
 .background_main {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -310,6 +313,17 @@ font-face {
 body {
     font-family: 'Gilroy', sans-serif;
     overflow: hidden;
+    padding-top: constant(safe-area-inset-top); /* для iOS < 11.2 */
+    padding-top: env(safe-area-inset-top); /* для iOS >= 11.2 */
+
+    padding-bottom: constant(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
+
+    padding-left: constant(safe-area-inset-left);
+    padding-left: env(safe-area-inset-left);
+
+    padding-right: constant(safe-area-inset-right);
+    padding-right: env(safe-area-inset-right);
 }
 header {
     border-radius: 30px;
@@ -882,6 +896,7 @@ input[type=range]+.thumb {
     padding: 10px 30px;
     --seek-before-width: 0%;
     --volume-before-width: 100%;
+    box-sizing: border-box;
 }
 .audio-photo-names {
     display: -webkit-box;
@@ -2324,7 +2339,7 @@ selected-item-filter {
     .main-section {
         display: flex;
         margin: 10px 15px;
-        height: calc(100vh - 240px);
+        height: calc(100vh - 220px);
     }
     .podcast_autor {
         display: none;
@@ -2415,6 +2430,12 @@ selected-item-filter {
     .view_all a {
         font-size: 18px;
     }
+    /*.autorizhate a:nth-child(1) {*/
+    /*    display: none;*/
+    /*}*/
+    .autorizhate a:nth-child(3) {
+        display: none;
+    }
 }
 @media(max-width: 500px){
     .play-button.expanded svg {
@@ -2431,6 +2452,19 @@ selected-item-filter {
         left: 8px;
         top: 10px;
     }
+    .header_items {
+        padding: 10px 15px;
+    }
+    .dropdown-container {
+        padding-bottom: 15px;
+        margin: 0 0 0 10px;
+    }
+    .audio-photo img {
+        width: 45px;
+        height: 45px;
+        border-radius: 5px;
+    }
+
 }
 @media(max-width: 475px){
     .play-button.expanded svg {
@@ -2448,25 +2482,33 @@ selected-item-filter {
     }
     .main-section {
         margin: 5px 5px;
+        height: calc(100vh - 180px);
+    }
+    .site-content.full {
+        width: calc(100% - 55px);
     }
     header {
         margin: 5px 5px 0;
-    }
-    .sidebar-menu {
-        width: 200px;
-        margin-right: 5px;
+        border-radius: 20px;
     }
     .site-content {
-        width: calc(100% - 200px);
+        width: calc(100% - 175px);
+        border-radius: 20px;
+    }
+    .sidebar-menu {
+        width: 170px;
+        margin-right: 5px;
+        border-radius: 20px;
     }
     .sidebar-menu li {
-        padding: 8px 18px;
+        padding: 10px 15px;
     }
     .sidebar-menu.small {
-        width: 60px;
+        width: 50px;
     }
     .sidebar-menu .menu-header {
-        margin: 15px 18px 0px;
+        margin: 15px 15px 0px;
+        font-size: 18px;
     }
 }
 @media(max-width: 468px){
@@ -2475,8 +2517,8 @@ selected-item-filter {
         width: 340px;
     }
     .dropdown-content {
-        left: 84px;
-        top: 153px;
+        left: 157px;
+        top: 10px;
     }
     .site-content {
         padding: 30px 7px 30px 15px;
@@ -2484,6 +2526,7 @@ selected-item-filter {
     .search input[type="text"] {
         font-size: 14px !important;
         padding: 4px 17px 4px 35px !important;
+        height: 27px !important;
     }
     .logotype {
         height: auto;
@@ -2496,6 +2539,24 @@ selected-item-filter {
         font-size: 15px;
         font-weight: 700;
         padding: 5px;
+    }
+    .sidebar-menu .menu-icon {
+        width: 20px;
+        height: 20px;
+        margin-right: 10px;
+        flex-shrink: 0;
+    }
+    .dropdown-filter {
+        left: 88px;
+        top: 156px;
+    }
+    .dropdown-popular {
+        left: 136px;
+        top: 126px;
+    }
+    .categories-list-block span {
+        font-size: 16px;
+        border-radius: 40px;
     }
 }
 @media(max-width: 443px){
@@ -2531,11 +2592,37 @@ selected-item-filter {
     .title-category p span {
         font-size: 22px;
     }
+    .podcast_name {
+        font-size: 15px;
+    }
+}
+@media(max-width: 437px){
+    .dropdown-content {
+        left: 9px;
+        top: 10px;
+    }
 }
 @media(max-width: 421px){
     .search-results {
         left: 10%;
         width: 340px;
+    }
+    .dropdown span {
+        font-size: 16px;
+    }
+}
+@media(max-width: 415px){
+    .auth-card {
+        width: 340px;
+    }
+}
+@media(max-width: 400px){
+    .categories-list-block span {
+        font-size: 15px;
+        padding: 6px 20px;
+    }
+    .audio-player {
+        padding: 10px 10px;
     }
 }
 /*Media settings end*/
