--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1206,20 +1206,50 @@ input[type="range"]:active::-webkit-slider-thumb {
 /*    width: var(--load-before-width, 0%);*/
 /*    background-color: #fff; !* або будь-який кольоровий відтінок, який ви хочете *!*/
 /*}*/
-input[type="range"]::before {
-    position: absolute;
-    content: "";
-    top: 8px;
-    left: 0;
-    width: var(--seek-before-width);
-    height: 3px;
-    background-color: #56A442;
-    cursor: pointer;
-    border-radius: 20px;
-    border: 0px solid #56A442;
-    z-index: 2;
+/*input[type="range"]::before {*/
+/*    position: absolute;*/
+/*    content: "";*/
+/*    top: 8px;*/
+/*    left: 0;*/
+/*    width: var(--seek-before-width);*/
+/*    height: 3px;*/
+/*    background-color: #56A442;*/
+/*    cursor: pointer;*/
+/*    border-radius: 20px;*/
+/*    border: 0px solid #56A442;*/
+/*    z-index: 2;*/
+/*}*/
+:root {
+    /* Задаємо початкові значення змінних */
+    --loaded-width: 0%; /* Ширина завантаженої частини */
+    --played-width: 0%; /* Ширина відтвореної частини */
 }
 
+/* Стилі для відображення завантаженої частини аудіо */
+#seek-slider::after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 0;
+    width: var(--loaded-width); /* Використовуємо змінну для ширини */
+    height: 3px;
+    background-color: #ddddddba; /* Колір завантаженої частини */
+    border-radius: 20px;
+    z-index: 1;
+}
+
+/* Стилі для відображення відтвореної частини аудіо */
+input[type="range"]::before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 0;
+    width: var(--played-width); /* Використовуємо змінну для ширини */
+    height: 3px;
+    background-color: #56A442; /* Колір відтвореної частини */
+    border-radius: 20px;
+    z-index: 2;
+}
 #volume-slider::before {
     width: var(--volume-before-width);
     z-index: 1;
@@ -2365,7 +2395,9 @@ selected-item-filter {
         display: none;
     }
     #seek-slider {
-        display: none;
+        position: absolute;
+        width: 100%;
+        bottom: -2px;
     }
     #duration {
         display: none;
